@reduxjs/toolkit workplace change to the frontend/packaje.json

--- a/package.json
+++ b/package.json
@@ -10,8 +10,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3"
-  }
+  "license": "ISC"
 }
