--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.2"
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "nodemin": "^1.0.1",
     "nodemon": "^3.1.0"
   }
 }
