--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "start cmd /k \"cd backend && npm start\" & start cmd /k \"cd frontend && npm start\"",
     "server": "cd backend && npm start",
     "client": "cd frontend && npm start",
     "build": "cd frontend && npm i && cd .. && cd backend && npm i"
