--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "start cmd /k \"cd backend && npm start\" & start cmd /k \"cd frontend && npm start\"",
     "server": "cd backend && npm start",
     "client": "cd frontend && npm start",
-    "build": "cd frontend && npm i && cd .. && cd backend && npm i"
+    "build": "cd backend && npm install && cd ../frontend && npm install"
+
   },
   "license": "ISC",
   "dependencies": {
