Image bug fix, changed some routes

--- a/frontend/.env.test
+++ b/frontend/.env.test
@@ -9,3 +9,9 @@ REACT_APP_BASE_SIZE=
 
 # Port number for the React application
 REACT_APP_PORT=
+
+# Settings for local tests
+# REACT_APP_API_KEY=Your_API_key
+# REACT_APP_BASE_URL=http://localhost:3000
+# REACT_APP_BASE_SIZE=600
+# REACT_APP_PORT=3001
